dnl Process this file with autoconf to produce a configure script.

AC_INIT([dbf2txt],[0.1],[ixamit_at_gmail_dot_com])
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE()

dnl Check for programs
AC_PROG_CC
AC_PROG_RANLIB
AC_LIBTOOL_DLOPEN
AC_PROG_LIBTOOL

#AC_LIBTOOL_DLOPEN
#AM_PROG_LIBTOOL
#AC_PROG_LIBTOOL
#AC_LIB_LTDL

dnl Check for libraries.

AC_OUTPUT(
Makefile
common/Makefile
lib/Makefile
src/Makefile
plugin/Makefile
plugin/sql/Makefile
plugin/xml/Makefile
)
